src/test/deca/context/invalid/test_error_3.36.deca
// Description:
//    Soulève l'erreur (3.36)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : 'int' et 'float' ne sont pas compatibles pour l'affectation (règle 3.36)
//
// Historique:
//      cree le 06/01/2022

{
	int i;
	float i = 1;
}
